--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -70,7 +70,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 24px;
-    background-color: #242424;
+    
 }
 
 .chatMessageUser {
@@ -81,14 +81,14 @@
 
 .chatMessageUserMessage {
     padding: 20px;
-    background: #adb5bd;
+    background: #2e2e2e;
     border-radius: 8px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 22px;
-    color: #242424;
+    color: #CCCCCC;
     flex: none;
     order: 0;
     flex-grow: 0;
@@ -101,19 +101,20 @@
     margin-bottom: 12px;
     max-width: 80%;
     display: flex;
-    background: #adb5bd;
+    background: #242424;
 }
 
 .chatMessageError {
     padding: 20px;
     border-radius: 8px;
     box-shadow: rgba(182, 52, 67, 1) 1px 1px 2px, rgba(182, 52, 67, 1) 0px 0px 1px;
-    color: #242424;
+    color: #ff4b5c;
     flex: none;
     order: 0;
     flex-grow: 0;
     max-width: 800px;
     margin-bottom: 12px;
+    background: #2d2d2d;
 }
 
 .chatMessageErrorContent {
